:sparkles: close db conn inside runner shutdown
